test/functions/whereClauses/whereClauseNoFn2.chpl
proc foo(x) where bar() {
  writeln("In foo");
}

foo(1);
